# resi

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  quickstart.py
data/desidr2/: desidr2_cov.txt  desidr2_mean.txt
examples/: test_cpp.cpp
src/: lcdm.rs  lib.rs  main.rs
