[package]
name = "deri"
version = "0.1.0"
edition = "2024"
description = "Dark Energy Rusty Instrument"

[lib]
name = "deri"
# crate-type = ["cdylib"]
crate-type = ["staticlib"]

[dependencies]
# pyo3 = { version = "0.25.1", features = ["extension-module"] }
nalgebra = "0.33.2"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
