[package]
name = "resi"
version = "0.1.0"
edition = "2024"
description = "Dark Energy Rusty Instrument"

[lib]
name = "resi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true }
nalgebra = "0.33.2"
cxx = "1.0"

[features]
python = ["pyo3"]

[build-dependencies]
cxx-build = "1.0"
